--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:700" rel="stylesheet">
-    <title>Burger Customizer</title>
+    <title>Burger Builder</title>
   </head>
   <body>
     <noscript>
